# imlib2

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  imlib2.spec.in
m4/: ac_warnflags.m4  ec_visibility.m4  ec_warnflags.m4
src/lib/: Imlib2.h  Makefile.am  api.c  asm.h  blend.c  blend.h  color.h  color_helpers.h  colormod.c  colormod.h  common.h  context.c  context.h  draw.c  draw.h  dynamic_filters.c  dynamic_filters.h  ellipse.c  file.c  file.h  filter.c  filter.h  font.h  font_draw.c  font_load.c  font_main.c  font_query.c  grab.c  grab.h  grad.c  grad.h  image.c  image.h  line.c  modules.c  polygon.c  rectangle.c  rend.c  rend.h  rgba.c  (+15 more)
src/modules/filters/: Makefile.am  filter_bumpmap.c  filter_colormod.c  filter_common.h  filter_test.c
src/modules/loaders/: Makefile.am  loader_argb.c  loader_bmp.c  loader_bz2.c  loader_common.h  loader_ff.c  loader_gif.c  loader_id3.c  loader_jpeg.c  loader_lbm.c  loader_png.c  loader_pnm.c  loader_tga.c  loader_tiff.c  loader_xpm.c  loader_zlib.c
